tests/fails/f3.t
struct A { int }
terra foo()
    var a : A
    return a._1
end
foo()
